<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainTaskViewer">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/lightBlue"
        app:cardCornerRadius="6dp"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/taskName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task"
                android:textSize="25dp"
                android:textStyle="bold"
                android:fontFamily="@font/andika_new_basic_bold"
                android:textColor="@color/darkblue"
                android:layout_margin="3dp"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="18dp"
                android:layout_margin="3dp"/>

            <TextView
                android:id="@+id/priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority"
                android:textSize="18dp"
                android:layout_margin="3dp"/>

            <TextView
                android:id="@+id/deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deadline"
                android:textSize="18dp"
                android:layout_margin="3dp"/>

            <Button
                android:id="@+id/editBtn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:backgroundTint="@color/blue"
                android:gravity="center"
                android:text="@string/editBtnText"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>