<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_background"
    tools:context=".MainAddTask">

    <TextView
        android:id="@+id/createTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/andika_new_basic_bold"
        android:gravity="center"
        android:text="@string/createTaskTitle"
        android:textColor="@color/darkblue"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="Task Name"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_view"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="Task Description"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_view"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/editPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="Task Priority"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_view"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/editdeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="Task Deadline"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_view"
        android:padding="10dp"/>

    <Button
        android:id="@+id/addTaskBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createTaskBtn"
        android:textSize="16dp"
        android:backgroundTint="@color/darkblue"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/delTaskBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteTaskBtn"
        android:textSize="16dp"
        android:backgroundTint="@color/red"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:textStyle="bold"/>


</LinearLayout>